# ChangeLog for games-emulation/ps2emu-usblinuz
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  +files/ps2emu-usblinuz-use-gtk2.patch, +ps2emu-usblinuz-0.4-r1.ebuild,
  ps2emu-usblinuz-9999.ebuild:
  Added patch to drop gtk+-1.x dep.

  23 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> ps2emu-usblinuz-0.4.ebuild:
  Fixed keywords.

  03 Mar 2008; Michał Ziąbkowski <mziab@o2.pl> ps2emu-usblinuz-0.4.ebuild,
  ps2emu-usblinuz-9999.ebuild:
  Fixed the docs in src_install. My bad.
