@@ -1,6 +1,6 @@
 AUX ps2emu-usblinuz-use-gtk2.patch 1077 RMD160 cd46cb670d3f39db0dadb554dc096321d2cf7a81 SHA1 d0b65a3291f5fcefa223685d921f3bfbdadc643d SHA256 44bac19394c9708b81178a1e371a220e39f321025c0f1b7055c1b635b2422625
 DIST pcsx2-0.9.4.tar.gz 6098636 RMD160 3ae7801900833214613c4a8a346d295065bdaab7 SHA1 a471ce5614efdb5e215c0b09f75cc7550bb7a461 SHA256 208420ff1d83116d95029d0d1da8d01383d06a67aa1c16e10947cfd727d7740c
-EBUILD ps2emu-usblinuz-0.4-r1.ebuild 1023 RMD160 df541b5c98dcafb28da2135d0c267f6713c410ae SHA1 a665bca87eed6419c656fab30f3cd146652d818b SHA256 6cc740055197eb0497f51d62cb8161ce86da3c0bdc541684ffa2e20c38507139
-EBUILD ps2emu-usblinuz-0.4.ebuild 980 RMD160 a6d9ee7c543512ed41dcdbe9a119e6805017e5a8 SHA1 646ed897ff5b5ccaa99daf84f65d268b72cb469f SHA256 805ec987f002dc1e0895f755a06a9bf31165edc4dddaef3e82dba7a0c240de56
-EBUILD ps2emu-usblinuz-9999.ebuild 1104 RMD160 1cbe5d0de6e8320fbb6c7578c5be8dc79cee3b06 SHA1 3da304db6e61cda94662a55ac040f21678b980ec SHA256 34110328c87ac1aef4ee637b62427e278050919215e8b2d177ec8f1fc58c45c7
-MISC ChangeLog 568 RMD160 dcf177f45d942decc2147b95276a65672c36224e SHA1 9d40ecc59d7e6102b1cda0138fada195e6e9225a SHA256 b2760c6e7593bfb1e0fc3463ab64a3d289d1b0e215edcfbeac155f77fd4b5dda
+EBUILD ps2emu-usblinuz-0.4-r1.ebuild 1021 RMD160 a3983705b41ab13f29224193cafd81e4cd11cb5e SHA1 299ce0f4291097565135e2589a592f7c1a8a06d1 SHA256 a605994889162f2451d1ea6d99d50c3118d19f23da51587fcf9bb63d96b56a34
+EBUILD ps2emu-usblinuz-0.4.ebuild 979 RMD160 788288b44c55b671fa65cb039da230fdcf23ed05 SHA1 53ca2ab0817822be3f45d3713708826ee5cdb23e SHA256 d35f4a9d65f1a359666b84e276f8cf5e107e67f740b5de9425e1ac2522ad0467
+EBUILD ps2emu-usblinuz-9999.ebuild 1103 RMD160 a5d246d364cacfedf14e8bd9981fab1df88405da SHA1 2bc7d0a420a1bda24ee0d51154ee322e9b645e7e SHA256 4f1859f335e31b055cdcaf68fa408acb8a94813bf4a0dbd71d5c2b946fbb684c
+MISC ChangeLog 744 RMD160 13e3957fe7d31eed66a0ac03cc2c20a75bde327d SHA1 6ed4fda26e80631a05f5061e2e9034c2f017a56f SHA256 7ae8f0d577ad973352a9591ec1a2f8bbd4723fe73e36028b81daa8d9f0ba3053
