@@ -1,4 +1,4 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/games-emulation/ps2emu-cddvdlinuz/ps2emu-cddvdlinuz-0.3-r1.ebuild,v 1.7 2007/04/06 18:56:48 nyhm Exp $
 
@@ -22,9 +22,9 @@ S="${WORKDIR}/${PCSX2}/plugins/usb/USBlinuz/Linux"
 src_unpack() {
 	unpack ${A}
 	cd "${S}"
-	
+
 	epatch "${FILESDIR}/${PN}-use-gtk2.patch"
-	
+
 	sed -i \
 		-e '/^CC =/d' \
 		-e '/\bstrip\b/d' \
