@@ -1,4 +1,4 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/games-emulation/ps2emu-cddvdlinuz/ps2emu-cddvdlinuz-0.3-r1.ebuild,v 1.7 2007/04/06 18:56:48 nyhm Exp $
 
@@ -21,7 +21,7 @@ S=${WORKDIR}/CDVDlinuz
 src_unpack() {
 	subversion_src_unpack
 	cd "${S}/Linux"
-	
+
 	epatch "${FILESDIR}/${PN}-use-gtk2.patch"
 
 	sed -i \
